# DeepPool

./: .gitignore  README.md  anvil-start.sh  ar-n4-c4-i4.xml  build.sh  cluster.py  clusterClient.py  dlrm_cluster_start.sh  genConfigForAwsExperiment.py  genConfigForFastnic.py  gpuProfiler.py  hostfile.txt  jobDescription.py  latency_model.ipynb  mk_clear_logs.sh  mk_run_cluster.sh  mk_run_cluster_dlrm_4gpus.sh  mk_run_cluster_dlrm_8gpus.sh  mk_run_cluster_vgg.sh  mk_run_model_dlrm_4gpus.sh  mk_run_model_dlrm_8gpus.sh  mk_run_vgg.sh  parallelizationPlanner.py  requirements.txt  runtime.py  sampleHostFile.txt  test.ipynb
be_training/: .gitignore
bench/: bench.cpp  setup.py
csrc/: AutoLRSClient.cpp  AutoLRSClient.h  CMakeLists.txt  CUDASleep.cu  CUDASleep.h  GradSync.cpp  GradSync.h  JobContext.cpp  JobContext.h  Manager.cpp  Manager.h  catsDogs.cpp  catsDogs.h  comm_p2p_master.cpp  comm_p2p_slave.cpp  communication.cpp  communication.h  dataset.cpp  dataset.h  logger.h  rpcService.cpp  runnableModule.cpp  runnableModule.h  runtime.cpp  runtime.h  stats.cpp  stats.h  streamingDataset.cpp  streamingDataset.h  taskManager.cpp  taskManager.h  test.cpp  tracer.h
csrc/protos/: runtime.proto
deeppool_example/: main.py  main_MP.py  resnet34.py  resnet34_MP.py
examples/: anvil_resnet.py  dlrm_s_pytorch.py  generic.py  inception.py  resnet.py  resnetImported.py  tiny.py  tiny2.py  unet.py  utils.py  vgg.py  vgg_cifar.py  vit.py  wrn.py
examples/dlrm/: dlrm_data_pytorch.py
